# sysdiagram

./: .gitignore  Cargo.toml  README.md
.github/workflows/: pages.yaml
res/: .gitignore  AdventureWorks DW for DAX.sysdiagram  AdventureWorksDW2008Cube.dds.xml  Create.xml  Currency.sysdiagram  Date Time.sysdiagram  Finance .sysdiagram  Finance Data.sysdiagram  Geography.sysdiagram  Internet Sales.sysdiagram  Product.dds.xml  ProductInventory.sysdiagram  README.md  Reseller Sales.sysdiagram  date.dds.xml
src/: connection_string.rs  core.rs  dds.rs  dsref.rs  dtyp.rs  error.rs  io.rs  lib.rs  mdtdb.rs  parser.rs
