[package]
name = "sysdiagram"
version = "0.1.1"
authors = ["Xiphoseer"]
edition = "2018"
homepage = "https://xiphoseer.github.io"
repository = "https://github.com/xiphoseer/sysdiagram"
description = "Parser for MSSQL Sysdiagrams"
license = "MIT"
readme = "README.md"

[features]
cli = ["dep:anyhow", "dep:mapr", "dep:argh"]

[dependencies]
ms-oforms = { git = "https://github.com/Xiphoseer/rust-ms-oforms.git", rev = "e1b9bce"}
base64 = "0.21"
cfb = "0.9"
encoding_rs = "0.8"
displaydoc = "0.1"
thiserror = "1.0"
anyhow = { version = "1.0", optional = true }
mapr = { version = "0.8", optional = true }
argh = { version = "0.1.9", optional = true }
bitflags = "2.4.1"
nom = "7"
bstr = "1.7.0"
uuid = "1.5.0"
num-traits = "0.2.17"
num-derive = "0.4.1"

[[bin]]
name = "sysdiagram"
required-features = ["cli"]
